set api keys production

--- a/templates/registration/card.html
+++ b/templates/registration/card.html
@@ -15,9 +15,9 @@
 
   <script type="text/javascript">
   $(document).ready(function() {
-    OpenPay.setId('mfwskxgm60glhftb6zoi');
-    OpenPay.setApiKey('pk_d264eb5cb34640b28e9b4f3d905a8a9c');
-    OpenPay.setSandboxMode(true);
+    OpenPay.setId('mvxqe7lptoksnojblhl5');
+    OpenPay.setApiKey('pk_883e1f5392fa48b582f3c255c3d8bfff');
+    OpenPay.setSandboxMode(false);
     //Se genera el id de dispositivo
     var deviceSessionId = OpenPay.deviceData.setup("payment-form", "deviceIdHiddenFieldName");
     $('#pay-button').on('click', function(event) {
