--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?-jzxpkh');
-	src:url('fonts/icomoon.eot?#iefix-jzxpkh') format('embedded-opentype'),
-		url('../fonts/icomoon.ttf?-jzxpkh') format('truetype'),
-		url('../fonts/icomoon.woff?-jzxpkh') format('woff'),
-		url('../fonts/icomoon.svg?-jzxpkh#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?-sqdvr4');
+	src:url('../fonts/icomoon.eot?#iefix-sqdvr4') format('embedded-opentype'),
+		url('../fonts/icomoon.ttf?-sqdvr4') format('truetype'),
+		url('../fonts/icomoon.woff?-sqdvr4') format('woff'),
+		url('../fonts/icomoon.svg?-sqdvr4#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,9 +23,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-facebook2:before {
-	content: "\ea8d";
+.icon-facebook:before {
+	content: "\ea8c";
 }
-.icon-twitter2:before {
-	content: "\ea92";
+.icon-twitter:before {
+	content: "\ea91";
 }
