--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -4,17 +4,14 @@
 	{% load staticfiles %}
 	<meta charset='UTF-8'>
 	<meta name="google-site-verification" content="HUiZQPmWjCUh_UP2qKO-T8l0WdlEFeXA2OCJaMQBFoU" />
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>GusYa</title>
-	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-	<link rel="stylesheet" href="{% static 'css/estilos.css' %}" />
-	<link rel="stylesheet" href="{% static 'css/style.css' %}" />
-	<link rel="stylesheet" href="{% static 'css/social-share-kit.css' %}" />
+	<link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+	<link rel="stylesheet" media="screen and (min-width: 500px)" href="{% static 'css/desktop.css' %}">
+	<link rel="stylesheet" media="screen and (max-width: 499px)" href="{% static 'css/mobile.css' %}">
+
 	<link rel="shortcut icon" href="{% static 'images/Bowtie.png' %}" type="image/png" />
-	<style type="text/css">
-	  .header{
-		  background-image: url("{% static 'images/landing_image.jpg' %}");
-	  }
-  </style>
+
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -30,59 +27,11 @@
 </head>
 <body>
 
-	<div class="container-fluid">
-
-
 		{% block content %}
 		{% endblock %}
 
 	<link href='http://fonts.googleapis.com/css?family=Titillium+Web:200' rel='stylesheet' type='text/css'>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<!-- Social Share Kit JS -->
-	<script type="text/javascript" src="{% static 'js/social-share-kit.min.js' %}"></script>
-	<script type="text/javascript">
 
-    // Init Social Share Kit
-    SocialShareKit.init({
-        'url': 'http://gusya.co',
-        'twitter': {
-            'title': 'GusYa',
-            'via': 'gusya'
-        }
-    });
-
-    $(function () {
-
-        // Just to disable href for other example icons
-        $('.ssk').on('click', function (e) {
-            e.preventDefault();
-        });
-
-        // Navigation collapse on click
-        $('.navbar-collapse ul li a:not(.dropdown-toggle)').bind('click', function () {
-            $('.navbar-toggle:visible').click();
-        });
-
-        // Email protection
-        $('.author-email').each(function () {
-            var a = '@', em = 'support' + a + 'social' + 'sharekit' + '.com', t = $(this);
-            t.attr('href', 'mai' + 'lt' + 'o' + ':' + em);
-            !t.text() && t.text(em);
-        });
-
-        // Sticky icons changer
-        $('.sticky-changer').click(function (e) {
-            e.preventDefault();
-            var $link = $(this);
-            $('.ssk-sticky').removeClass($link.parent().children().map(function () {
-                return $(this).data('cls');
-            }).get().join(' ')).addClass($link.data('cls'));
-            $link.parent().find('.active').removeClass('active');
-            $link.addClass('active').blur();
-        });
-    });
-
-
-	</script>
 </body>
 </html>
