--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -17,7 +17,15 @@ img {
 .blue_text {
   color: #304343;
 }
+.errorlist {
+  color: red;
+  font-weight: bold;
+  margin: 0;
+}
 
+.errorlist li {
+  margin: 0;
+}
 input:focus,
 select:focus,
 textarea:focus,
@@ -74,12 +82,11 @@ form {
   margin: 0;
 }
 
-#info form input[type="text"] {
+#info form input[type="number"] {
   background: #EDF1F1;
   border: 1px solid #D0D1D1;
   border-radius: 3px;
   color: #566170;
-  width: 72%;
   height: 2em;
 }
 
