--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -25,21 +25,9 @@
     <figure>
       <img src="{% static 'images/globo@2x.png' %}" alt="text" />
     </figure>
-    <p class="gray_text">
-      Escribe un mensaje de whatsapp para conseguir lo que
-      quieras, 24/7.
-    </p>
-
-    <form action="" method="post" role="form">
-      {% csrf_token %}
-      <p class="blue_text">¿Quiéres comunicarte con Gus?</p>
-      <p class="gray_text">Dejanos tu número y se de los primeros en probarlo:</p>
-      {% if form.phone_number.errors %}
-        {{ form.phone_number.errors }}
-      {% endif %}
-      {{ form.phone_number|attr:"placeholder: (55)5555-5555"}}
-      <input type="submit" name="name" value="Enviar">
-    </form>
+    <h2 class="blue_text">
+      Gracias por elegir Gusya, pronto nos comunicaremos contigo.
+    </h2>
 
   </div>
 
