--- a/templates/registration/card.html
+++ b/templates/registration/card.html
@@ -341,6 +341,9 @@
                   <div class="sctn-col l">
                     <label>Número telefonico</label><input type="number" name="phone_number" placeholder="xx-xxxx-xxxx" autocomplete="off">
                   </div>
+                  <div class="sctn-col">
+                    <label>Email</label><input type="email" name="email" autocomplete="off">
+                  </div>
                   <br>
 
               <div class="sctn-col l">
