--- a/templates/registration/send_email_user.html
+++ b/templates/registration/send_email_user.html
@@ -15,7 +15,7 @@
   {% csrf_token %}
   <table class="table table-hover" style="margin-top: 5em;">
       <th>#</th>
-      <th>Email</th>
+      <th>Número</th>
       <th>Nº Recomendaciones</th>
       <th>Fecha de registro</th>
   {% for user in users %}
@@ -23,7 +23,7 @@
     <td>
       <input id="id_emails_{{user.pk}}" name="emails" type="checkbox" value="{{user.pk}}">
     </td>
-    <td>{{user.email}}</td>
+    <td>{{user.phone_number}}</td>
     <td>{{user.referenced_users}}</td>
     <td>{{user.registration_date}}</td>
   </tr>
