--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,13 +5,14 @@
 	<meta charset='UTF-8'>
 	<meta name="google-site-verification" content="HUiZQPmWjCUh_UP2qKO-T8l0WdlEFeXA2OCJaMQBFoU" />
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>GusYa</title>
+	<title>Gus Concierge</title>
 	<link rel="stylesheet" href="{% static 'css/normalize.css' %}">
 	<link rel="stylesheet" href="{% static 'css/intlTelInput.css' %}">
+	<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 	<link rel="stylesheet" media="screen and (min-width: 500px)" href="{% static 'css/desktop.css' %}">
 	<link rel="stylesheet" media="screen and (max-width: 499px)" href="{% static 'css/mobile.css' %}">
 
-	<link rel="shortcut icon" href="{% static 'images/Bowtie.png' %}" type="image/png" />
+	<link rel="shortcut icon" href="{% static 'images/Gus_logo.png' %}" type="image/png" />
 
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -31,7 +32,7 @@
 		{% block content %}
 		{% endblock %}
 
-	<link href='http://fonts.googleapis.com/css?family=Titillium+Web:200' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="{% static 'js/intlTelInput.min.js' %}"></script>
 	<script>
