--- a/templates/base/base_admin.html
+++ b/templates/base/base_admin.html
@@ -6,6 +6,8 @@
 
     <title>GusYa</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
+
     <link rel="stylesheet" href="{% static 'css/admin.css' %}">
   </head>
 
@@ -25,8 +27,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="{% url 'user:active_user' %}">Lista de espera</a></li>
-            <li><a href="{% url 'user:mail_sent' %}">Correos Enviados</a></li>
-            <li><a href="{% url 'user:phone' %}">Contactos</a></li>
+            <li><a href="{% url 'user:active' %}">Contactos</a></li>
             <li><a href="{% url 'user:make_charge' %}">Pago</a></li>
             <li><a href="{% url 'user:admin_logout' %}">Cerrar Sesión</a></li>
           </ul>
