--- a/templates/registration/send_email_user.html
+++ b/templates/registration/send_email_user.html
@@ -14,18 +14,20 @@
 <form action="" method="POST">
   {% csrf_token %}
   <table class="table table-hover" style="margin-top: 5em;">
-      <th>#</th>
       <th>Número</th>
       <th>Nº Recomendaciones</th>
       <th>Fecha de registro</th>
+      <th>Mensaje</th>
   {% for user in users %}
   <tr>
-    <td>
-      <input id="id_emails_{{user.pk}}" name="emails" type="checkbox" value="{{user.pk}}">
-    </td>
     <td>{{user.phone_number}}</td>
     <td>{{user.referenced_users}}</td>
     <td>{{user.registration_date}}</td>
+    <td>
+      <a href="{% url 'user:outstanding' user.pk %}">
+        <i class="fa fa-arrow-circle-right"></i>
+      </a>
+    </td>
   </tr>
   {% endfor %}
   </table>
