--- a/static/css/desktop.css
+++ b/static/css/desktop.css
@@ -154,7 +154,27 @@ header figure {
   margin-right: 0.5em;
 }
 
+#info div input[type="text"] {
+  background: #EDF1F1;
+  border: 1px solid #D0D1D1;
+  border-radius: 3px;
+  color: #566170;
+  height: 3em;
+  width: 20em;
+  padding-left: 0.5em;
+}
+
 #info form input[type="submit"] {
+  background: #52d10b;
+  border-radius: 3px;
+  border: none;
+  color: white;
+  font-weight: 100;
+  height: 3em;
+  width: 24%;
+}
+
+#info div input[type="button"] {
   background: #52d10b;
   border-radius: 3px;
   border: none;
