--- a/templates/registration/faq.html
+++ b/templates/registration/faq.html
@@ -55,13 +55,13 @@
 
     <article>
         <p class="question">¿Cómo realizo un pago con Gus?</p>
-        <p class="answ">Si es la primera vez que le pides a Gus, te enviaremos un vínculo seguro con nuestro aliado Mercado Pago y simplemente tendrás que rellenar la información básica para poder completar el pedido. Los cargos se harán de manera segura y sólo cuando tu nos lo autorices.</p>
+        <p class="answ">Si es la primera vez que le pides a Gus, te enviaremos un vínculo seguro con nuestro aliado OpenPay y simplemente tendrás que rellenar la información básica para poder completar el pedido. Los cargos se harán de manera segura y sólo cuando tu nos lo autorices.</p>
     </article>
 
     <article>
         <p class="question">¿Es seguro el medio de pago?</p>
         <p class="answ">Gus no guardará tus datos de tarjeta.
-          Todos los procesos de pago son gestionados por Mercado Pago.
+          Todos los procesos de pago son gestionados por OpenPay.
         </p>
     </article>
 
