Changes in templates   - Add legal link   - Add link to home page logo   - Add email contact to the footer   - Change sa de cv for SAPI de cv

--- a/templates/registration/index.html
+++ b/templates/registration/index.html
@@ -6,7 +6,9 @@
 
 <header>
   <figure>
-    <img src="{% static 'images/Gus_logo@3x.png' %}" alt="Gusya" />
+    <a href="{% url 'user:waiting_list' %}">
+      <img src="{% static 'images/Gus_logo@3x.png' %}" alt="Gusya" />
+    </a>
   </figure>
   <h1>
     Conoce a Gus, tu nuevo mejor amigo.
