--- a/templates/base/base_user.html
+++ b/templates/base/base_user.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/estilos.css' %}" />
+    <link rel="stylesheet" media="screen and (min-width: 500px)" href="{% static 'css/desktopconfirm.css' %}">
+    <link rel="stylesheet" media="screen and (max-width: 499px)" href="{% static 'css/mobileconfirm.css' %}">
+
 
   </head>
 
