change width inputs

--- a/static/css/mobileconfirm.css
+++ b/static/css/mobileconfirm.css
@@ -182,7 +182,7 @@
     width: 100%;
   }
   .pymnt-cntnt div.sctn-row div.sctn-col input {
-    width: 303px;
+    width: 85%;
   }
   .pymnt-cntnt div.sctn-row div.sctn-col.half {
     width: 155px;
