--- a/static/css/mobileconfirm.css
+++ b/static/css/mobileconfirm.css
@@ -195,6 +195,7 @@
     width: 113px;
   }
   .pymnt-cntnt div.sctn-row div.sctn-col.cvv {
+    display: none;
     background-image: url("../../../static/images/cvv.png");
     background-position: 156px center;
     background-repeat: no-repeat;
@@ -257,4 +258,13 @@
   .card-expl h4 {
     font-weight: 400;
     margin: 0;
+  }
+
+  .shield{
+    display: none;
+  }
+
+  #pay-button{
+    width: 80%;
+    margin-left: 5%;
   }
