--- a/static/css/mobileconfirm.css
+++ b/static/css/mobileconfirm.css
@@ -192,7 +192,7 @@
     width: 190px;
   }
   .pymnt-cntnt div.sctn-row div.sctn-col.half input {
-    width: 113px;
+    width: 110%;
   }
   .pymnt-cntnt div.sctn-row div.sctn-col.cvv {
     display: none;
@@ -268,4 +268,3 @@
     width: 80%;
     margin-left: 5%;
   }
-
