--- a/templates/registration/card.html
+++ b/templates/registration/card.html
@@ -96,8 +96,8 @@
               <div class="sctn-row">
                 <div class="sctn-col l">
                   <label>Fecha de expiración</label>
-                  <div class="sctn-col half l"><input type="text" name="month" placeholder="Mes" data-openpay-card="expiration_month"></div>
-                  <div class="sctn-col half l"><input type="text" name="year" placeholder="Año" data-openpay-card="expiration_year"></div>
+                  <div class="sctn-col half l"><input type="text" name="month" placeholder="MM" data-openpay-card="expiration_month"></div>
+                  <div class="sctn-col half l"><input type="text" name="year" placeholder="AA" data-openpay-card="expiration_year"></div>
                 </div>
                 <div class="sctn-col cvv"><label>Código de seguridad</label>
                   <div class="sctn-col half l"><input type="text" name="cvv" placeholder="3 dígitos" autocomplete="off" data-openpay-card="cvv2"></div>
