--- a/templates/registration/faq.html
+++ b/templates/registration/faq.html
@@ -96,10 +96,14 @@
       <a href="">Empleo</a>
     </li>
     <li>
-      <a href="">Contacto</a>
+      <a href="mailto:contacto@gusya.co?Subject=Hola%20gus">Contacto</a>
+    </li>
+
+    <li>
+      <a href="#">Legal</a>
     </li>
     <li class="fb-logo">
-      <a href="#">
+      <a href="www.facebook.com/pidegus">
         <span class="icon-facebook"></span>
       </a>
     </li>
