--- a/templates/registration/index.html
+++ b/templates/registration/index.html
@@ -64,10 +64,14 @@
       <a href="">Empleo</a>
     </li>
     <li>
-      <a href="">Contacto</a>
+      <a href="mailto:contacto@gusya.co?Subject=Hola%20gus">Contacto</a>
+    </li>
+
+    <li>
+      <a href="#">Legal</a>
     </li>
     <li class="fb-logo">
-      <a href="#">
+      <a href="www.facebook.com/pidegus">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
