--- a/templates/registration/invitation_code.html
+++ b/templates/registration/invitation_code.html
@@ -78,7 +78,7 @@
       <a href="#">Legal</a>
     </li>
     <li class="fb-logo">
-      <a href="#">
+      <a href="www.facebook.com/pidegus">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
