--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -110,6 +110,70 @@ form {
   width: 100%;
 }
 
+#info div input[type="button"] {
+  background: #52d10b;
+  border-radius: 3px;
+  border: none;
+  color: white;
+  font-weight: 100;
+  height: 3em;
+  width: 100%;
+  margin-bottom: 1em;
+  margin-top: 6px;
+}
+
+#info .fb {
+  margin-bottom: 7em;
+}
+
+.fb-logo {
+  width: 0.5%;
+}
+.tw-logo {
+  width: 1%;
+}
+
+#content .tw {
+  color: #55acee;
+  border: 1px solid #55acee;
+  background: white;
+  border-radius: 3px;
+  
+}
+
+#content .fb {
+  color: #3b5998;
+  border: 1px solid #3b5998;
+  margin-left: 10px;
+  background: white;
+  border-radius: 3px;
+}
+
+#info div input[type="text"] {
+  background: #EDF1F1;
+  border: 1px solid #D0D1D1;
+  border-radius: 3px;
+  color: #566170;
+  height: 3em;
+  width: 20em;
+  padding-left: 0.5em;
+}
+
+#info .title-share {
+  display: none;
+}
+
+#info .title-share-1 {
+  font-size: 2em;
+  text-align: left;
+  color: #304343;
+}
+
+#info .text-share {
+  color: #71716b;
+  text-align: left;
+}
+
 #info p.title {
   display: none;
 }
