--- a/templates/registration/invitation_code.html
+++ b/templates/registration/invitation_code.html
@@ -38,14 +38,14 @@
 
     <div>
       {% csrf_token %}
-      <p class="blue_text" style="font-weight: 500;font-size: 1.3em;/* margin-top: 1em; */margin-top: 2em;">¿Quiéres comunicarte con Gus?</p>
-      <p class="gray_text" style="
+      <p class="blue_text title-share" style="font-weight: 500;font-size: 1.3em;/* margin-top: 1em; */margin-top: 2em;">¿Quiéres comunicarte con Gus?</p>
+      <p class="gray_text title-share-1" style="
           margin-top: 1em;
           font-weight: 100;
         ">Comparte Gus
         </p>
-      <p>Te hemos agregado a la lista de espera.</p>
-      <p>Comparte este link, entre más amigos se registren más rapido disfrutarás de Gus.</p>
+      <p class="text-share">Te hemos agregado a la lista de espera.</p>
+      <p class="text-share">Comparte este link, entre más amigos se registren más rapido disfrutarás de Gus.</p>
       <input class="js-copytextarea" type="text" value="www.holagus.com/user/{{invitation_code}}" onclick="select_all(this)">
       <input class="js-textareacopybtn" type="button" name="name" value="COPIAR">
     </div>
